--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
-    <script src="js/script.js" defer></script>
+    <script src="js/script.js"></script>
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
@@ -14,6 +14,7 @@
           <p class="upload_msg">Upload new token for X</p>
           <input type="file" id="X-upload" name="img" accept="image/*"/>
           <label for="X-upload" id="X-upload_label">Select image</label>
+          <img id="X-token" src="" alt="">
         </div>
         <div>
           <h1>Tic-Tac-Toe</h1>
@@ -32,9 +33,11 @@
           <p class="upload_msg">Upload new token for O</p>
           <input type="file" id="O-upload" name="img" accept="image/*"/>
           <label for="O-upload" id="O-upload_label">Select image</label>
+          <img id="O-token" src="" alt="">
         </div>
       </header>
       <main>
+        <br><br>
         <div class="board">
           <div id="1-1" class="cell">
             <div class="hstrike" id="h1"></div>
